[gd_scene load_steps=3 format=3 uid="uid://5341wm3jaoa2"]

[ext_resource type="Script" path="res://script/puzzle_preview.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://bmwyrpcgsjsug" path="res://img/lock-padlock-symbol-for-protect-cc.png" id="3"]

[node name="Node2D" type="Node2D"]
scale = Vector2(0.375, 0.375)
script = ExtResource("1")

[node name="PuzzlePreview" type="ColorRect" parent="."]
custom_minimum_size = Vector2(1, 1)
anchors_preset = -1
anchor_right = 0.603
offset_right = 256.0
offset_bottom = 256.0
pivot_offset = Vector2(128, 128)
color = Color(0.398438, 0.398438, 0.398438, 1)

[node name="PuzzleVisualizer" type="TextureRect" parent="PuzzlePreview"]
layout_mode = 0
offset_left = 6.0
offset_top = 6.0
offset_right = 250.0
offset_bottom = 250.0
texture = ExtResource("3")
expand_mode = 1

[node name="Button" type="Button" parent="PuzzlePreview"]
layout_mode = 0
offset_right = 256.0
offset_bottom = 256.0

[node name="PointsLabel" type="RichTextLabel" parent="PuzzlePreview"]
layout_mode = 0
offset_top = 255.75
offset_right = 256.0
offset_bottom = 362.75
bbcode_enabled = true
text = " "

[node name="ColorRect" type="ColorRect" parent="PuzzlePreview/PointsLabel"]
visible = false
layout_mode = 0
offset_left = 42.0
offset_top = 43.0
offset_right = 214.0
offset_bottom = 47.0

[connection signal="mouse_entered" from="PuzzlePreview/Button" to="." method="_on_Button_mouse_entered"]
[connection signal="mouse_exited" from="PuzzlePreview/Button" to="." method="_on_Button_mouse_exited"]
[connection signal="pressed" from="PuzzlePreview/Button" to="." method="_on_Button_pressed"]
